# PNGDecoder

./: .gitignore  CMakeLists.txt  Types.h  main.cpp
debug_test_files/: README.md  compiletilehash.h
decoder/png/: PNGImage.cpp  PNGImage.h  PNGImageConstructor.cpp  PNGImageConstructor.h  SignatureData.cpp  SignatureData.h
decoder/png/chunks/: Chunk.cpp  Chunk.h  IDATData.cpp  IDATData.h  IHDRData.cpp  IHDRData.h
decoder/png/chunks/misc/: ChunkType.h  ColorType.h  CompressionAlgorithm.h  FilterAlgorithm.h
decoder/png/fs/: PNGFile.cpp  PNGFile.h
decoder/png/parser/: Parser.cpp  Parser.h
utils/: CompileTime.h  IndexException.cpp  IndexException.h  LimitedSequence.h  SizeException.cpp  SizeException.h
